--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -6,5 +6,69 @@
     "delivery": "Доставка",
     "contacts": "Контакты",
     "order": "Заказать"
+  },
+
+  
+  "footer": {
+    "title": "Дом Матрасов",
+    "subtitle": "Лучшие матрасы и комфорт для вашего сна.",
+    "rights": "Дом Матрасов. Все права защищены."
+  },
+    "contact": {
+    "title": "Свяжитесь с нами",
+    "infoTitle": "Контактная информация",
+    "address": "Mirabad 33, Ташкент, Узбекистан",
+    "name": "Имя",
+    "phone": "Телефон",
+    "message": "Сообщение",
+    "send": "Отправить сообщение"
+  },
+  
+  "why": {
+    "title": "Почему выбирают Дом Матрасов",
+    "features": {
+      "materials": {
+        "title": "Импортные материалы",
+        "desc": "Ткани и наполнители из Испании, Турции и России, пружины от надежного партнёра из Китая."
+      },
+      "fast": {
+        "title": "Быстрое изготовление",
+        "desc": "Большинство заказов готовы в течение 1–2 дней."
+      },
+      "delivery": {
+        "title": "Бесплатная доставка и замер",
+        "desc": "Замер кровати и доставка по городу — бесплатно."
+      },
+      "warranty": {
+        "title": "Гарантия 10–20 лет",
+        "desc": "Долговечность и уверенность в качестве продукции."
+      }
+    },
+    "showroom": {
+      "title": "Приходите в наш шоурум",
+      "desc": "Испытайте комфорт наших матрасов лично — уютный шоурум в Миробадском районе, Ташкент.",
+      "button": "Посмотреть на карте"
+    }
+  },
+    "hero": {
+    "title": "Дом Матрасов — Комфорт, достойный вашего сна",
+    "subtitle": "Ортопедические и анатомические матрасы из качественных импортных материалов.",
+    "catalog": "Каталог",
+    "measure": "Бесплатный замер",
+    "fastTitle": "Готово за 1–2 дня",
+    "fastDesc": "Быстрое производство индивидуальных заказов",
+    "deliveryTitle": "Бесплатная доставка",
+    "deliveryDesc": "По городу — доставка и замер бесплатно",
+    "customTitle": "Индивидуальный пошив",
+    "customDesc": "Изготовление под размер кровати"
+  },
+  "about": {
+    "title": "С 2005 года — качество, которому можно доверять",
+    "description": "Мы производим матрасы из импортных материалов: пружинные блоки от нашего партнёра из Китая (20 лет сотрудничества), ткани и наполнители из Испании, Турции и России. На продукцию предоставляется гарантия от 10 до 20 лет.",
+    "button": "Узнать подробнее",
+    "imageAlt": "Мастер аккуратно шьет и собирает качественный матрас"
   }
+
+
+
 }
