--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -67,8 +67,22 @@
     "description": "Мы производим матрасы из импортных материалов: пружинные блоки от нашего партнёра из Китая (20 лет сотрудничества), ткани и наполнители из Испании, Турции и России. На продукцию предоставляется гарантия от 10 до 20 лет.",
     "button": "Узнать подробнее",
     "imageAlt": "Мастер аккуратно шьет и собирает качественный матрас"
+  },
+
+  "types_title": "Виды матрасов",
+
+  "types": {
+    "anatomic_title": "Анатомические матрасы",
+    "anatomic_desc": "Тело принимает естественное положение во время сна. Поддержка всех зон позвоночника.",
+
+    "ortho_title": "Ортопедические матрасы",
+    "ortho_desc": "Рекомендуется для людей с болью в спине. Обеспечивает укреплённую поддержку позвоночника.",
+
+    "sprless_title": "Беспружинные матрасы",
+    "sprless_desc": "Тихие, долговечные и гипоаллергенные. Идеальный вариант для любителей жёсткости.",
+
+    "kids_title": "Детские матрасы",
+    "kids_desc": "Безопасные и ортопедические матрасы, разработанные специально для новорожденных и детей."
   }
-
-
 
 }
