productsdagi yangi o'zgarishlar

--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -82,6 +82,24 @@
 
     "kids_title": "Детские матрасы",
     "kids_desc": "Безопасные и ортопедические матрасы, разработанные специально для новорожденных и детей."
+  },
+  
+  "heroo": {
+    "catalog": "Каталог"
+  },
+
+  "products": {
+    "title": "Наши продукты",
+
+    "memory": "Мемори Фоам",
+    "orthopedic": "Ортопедические",
+    "kids": "Детские",
+
+    "order": "Заказать"
+  },
+
+  "modal": {
+    "order": "Заказать"
   }
 
 }
