--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -88,18 +88,99 @@
     "catalog": "Каталог"
   },
 
-  "products": {
+"products": {
     "title": "Наши продукты",
+    "memory": "Матрасы Memory",
+    "orthopedic": "Ортопедические матрасы",
+    "kids": "Детские матрасы",
 
-    "memory": "Мемори Фоам",
-    "orthopedic": "Ортопедические",
-    "kids": "Детские",
+    "memory1": {
+      "name": "Memory Classic",
+      "desc": "Мягкий и удобный матрас с плотным слоем Memory Foam. Запоминает форму тела и снижает давление.",
+      "modalText": "Матрас изготовлен на основе высококачественной технологии Memory Foam, адаптируется к телу и уменьшает нагрузку на позвоночник.",
+      "btn": "Оформить заказ"
+    },
 
-    "order": "Заказать"
+    "memory2": {
+      "name": "Memory Airflow",
+      "desc": "Дышащая технология обеспечивает прохладный сон. Не удерживает тепло.",
+      "modalText": "Благодаря технологии Airflow обеспечивается хорошая циркуляция воздуха и комфортный сон даже в жаркое время года.",
+      "btn": "Оформить заказ"
+    },
+
+    "memory3": {
+      "name": "Memory Soft Touch",
+      "desc": "Очень мягкое покрытие, равномерно распределяет давление и снимает нагрузку с плеч и поясницы.",
+      "modalText": "Мягкая структура Memory Soft Touch обеспечивает нежную поддержку и комфортный сон.",
+      "btn": "Оформить заказ"
+    },
+
+    "memory4": {
+      "name": "Memory Premium",
+      "desc": "Премиальная плотность Memory Foam — максимальный комфорт и долгий срок службы.",
+      "modalText": "Матрас премиум-класса с повышенной плотностью Memory Foam обеспечивает идеальную поддержку и долговечность.",
+      "btn": "Оформить заказ"
+    },
+
+    "ortho1": {
+      "name": "Ortho Hard",
+      "desc": "Жёсткая ортопедическая основа удерживает позвоночник в правильном положении.",
+      "modalText": "Жёсткая ортопедическая конструкция обеспечивает правильную поддержку спины и позвоночника.",
+      "btn": "Оформить заказ"
+    },
+
+    "ortho2": {
+      "name": "Ortho Pro",
+      "desc": "Укреплённая основа для людей с большим весом. Равномерно распределяет нагрузку.",
+      "modalText": "Матрас с усиленной ортопедической основой идеально подходит для людей с повышенной нагрузкой на позвоночник.",
+      "btn": "Оформить заказ"
+    },
+
+    "ortho3": {
+      "name": "Ortho Soft",
+      "desc": "Более мягкий ортопедический слой. Полезная поддержка для спины.",
+      "modalText": "Модель с мягкой ортопедической поддержкой обеспечивает комфорт и правильную анатомическую форму сна.",
+      "btn": "Оформить заказ"
+    },
+
+    "ortho4": {
+      "name": "Ortho Premium",
+      "desc": "Премиальные ортопедические материалы обеспечивают прочность и долговечность.",
+      "modalText": "Матрас с премиальными ортопедическими материалами дарит комфорт и надёжную поддержку долгие годы.",
+      "btn": "Оформить заказ"
+    },
+
+    "kids1": {
+      "name": "Kids Comfort",
+      "desc": "Гипоаллергенный чехол, безопасный для детей.",
+      "modalText": "Матрас изготовлен из гипоаллергенных материалов и полностью безопасен для детей.",
+      "btn": "Оформить заказ"
+    },
+
+    "kids2": {
+      "name": "Kids Soft",
+      "desc": "Очень мягкий и удобный вариант для подростков.",
+      "modalText": "Модель Kids Soft обеспечивает мягкость и комфорт, идеальный для подростков.",
+      "btn": "Оформить заказ"
+    },
+
+    "kids3": {
+      "name": "Kids Hard",
+      "desc": "Более жёсткий слой — правильный выбор для развития позвоночника.",
+      "modalText": "Kids Hard поддерживает правильное развитие позвоночника благодаря жёсткой структуре.",
+      "btn": "Оформить заказ"
+    },
+
+    "kids4": {
+      "name": "Kids Premium",
+      "desc": "Дышащие материалы предотвращают перегрев и создают здоровый сон.",
+      "modalText": "Матрас премиум-класса для детей с воздухопроницаемыми материалами — комфорт и здоровье.",
+      "btn": "Оформить заказ"
+    }
   },
 
-  "modal": {
-    "order": "Заказать"
+  "card": {
+    "details": "Посмотреть детали"
   }
 
 }
