--- a/src/i18n/uz.json
+++ b/src/i18n/uz.json
@@ -87,18 +87,46 @@
     "catalog": "Katalog"
   },
 
+
   "products": {
-    "title": "Bizning Mahsulotlar",
+    "title": "Mahsulotlarimiz",
+    "memory": "Memory matraslar",
+    "orthopedic": "Ortopedik matraslar",
+    "kids": "Bolalar matraslari",
 
-    "memory": "Xotira ko‘pigi",
-    "orthopedic": "Ortopedik",
-    "kids": "Bolalar uchun",
+    "memory1": {
+      "name": "Memory Classic",
+      "desc": "Zich Memory Foam qatlamiga ega yumshoq va qulay matras. Tananing shaklini eslab, bosimni kamaytiradi.",
+      "modalText": "Bu matras yuqori sifatli Memory Foam texnologiyasi asosida tayyorlangan bo‘lib, tananing tuzilishiga moslashadi va bosimni kamaytiradi.",
+      "btn": "Buyurtma berish"
+    },
 
-    "order": "Buyurtma berish"
+    "memory2": {
+      "name": "Memory Airflow",
+      "desc": "Nafas oluvchi texnologiya salqin uyqu ta’minlaydi. Issiqlikni ushlab qolmaydi.",
+      "modalText": "Airflow texnologiyasi tufayli havo aylanishi yaxshi bo‘ladi va butun tun davomida salqin uyqu beradi.",
+      "btn": "Buyurtma berish"
+    },
+
+    "ortho1": {
+      "name": "Ortho Hard",
+      "desc": "Qattiq ortopedik asos umurtqa to'g'ri turishini ta'minlaydi.",
+      "modalText": "Ortopedik qattiq asos orqa va umurtqa uchun to‘liq qo‘llab-quvvatlash beradi.",
+      "btn": "Buyurtma berish"
+    },
+
+    "kids1": {
+      "name": "Kids Comfort",
+      "desc": "Hipoallergen qoplamali, bolalar uchun xavfsiz matras.",
+      "modalText": "Kichik yoshdagi bolalar uchun xavfsiz, yumshoq va hipoallergen materialdan tayyorlangan.",
+      "btn": "Buyurtma berish"
+    }
   },
 
-  "modal": {
-    "order": "Buyurtma berish"
+  "card": {
+    "details": "Batafsil ko‘rish"
   }
+
+
 
 }
